@@ -10,6 +10,9 @@ Release date: tba
 Core and Builtins
 -----------------
 
+- Issue #23996: Avoid a crash when a delegated generator raises an
+  unnormalized StopIteration exception.  Patch by Stefan Behnel.
+
 - Issue #24022: Fix tokenizer crash when processing undecodable source code.
 
 - Issue #23309: Avoid a deadlock at shutdown if a daemon thread is aborted
